--- a/src/components/Layout/Form.module.css
+++ b/src/components/Layout/Form.module.css
@@ -4,8 +4,12 @@
     border-radius: 15px 15px 0 0;
     position: relative;
     padding: 1em 1em;
-    position: relative;
     bottom: -13px;
+}
+
+textarea {
+    font-family: 'Poppins';
+    width: 500px;
 }
 
 .formText {
@@ -22,7 +26,7 @@
 }
 
 .formContainer {
-    padding: 1em 1em;
+    padding: .7em .6em;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -36,12 +40,20 @@
 .button {
     width: 80px;
     border-radius: 15px;
-    border: 1px solid grey;
+    color: white;
+    border: none;
+    background-color: #0077B5;
     height: 35px;
+}
+
+.li p {
+    font-weight: 500;
 }
 
 .button:hover {
     cursor: pointer;
+    background-color: #004182;
+    transition: .2s ease-in;
 }
 
 .loader {
@@ -50,25 +62,25 @@
     border-radius: 50%;
     position: relative;
     animation: rotate 1s linear infinite
-}
-.loader::before {
+  }
+  .loader::before {
     content: "";
     box-sizing: border-box;
     position: absolute;
     inset: 0px;
     border-radius: 50%;
-    border: 5px solid blue;
+    border: 4px solid #004182;
     animation: prixClipFix 2s linear infinite ;
-}
+  }
 
-@keyframes rotate {
+  @keyframes rotate {
     100%   {transform: rotate(360deg)}
-}
+  }
 
-@keyframes prixClipFix {
-    0%   {clip-path:polygon(50% 50%,0 0,0 0,0 0,0 0,0 0)}
-    25%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 0,100% 0,100% 0)}
-    50%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,100% 100%,100% 100%)}
-    75%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,0 100%,0 100%)}
-    100% {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,0 100%,0 0)}
-}
+  @keyframes prixClipFix {
+      0%   {clip-path:polygon(50% 50%,0 0,0 0,0 0,0 0,0 0)}
+      25%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 0,100% 0,100% 0)}
+      50%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,100% 100%,100% 100%)}
+      75%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,0 100%,0 100%)}
+      100% {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,0 100%,0 0)}
+  }
