--- a/src/components/Posts/Post.module.css
+++ b/src/components/Posts/Post.module.css
@@ -1,12 +1,12 @@
 .li {
     list-style-type: none;
-    margin-top: 2em;
+    margin-top: .5em;
     width: 600px;
     height: auto;
-    background-color: pink;
-    border: 1px solid black;
+    background-color: white;
+    border: 1px solid grey;
     border-radius: 15px;
-    margin-bottom: 2em;
+    margin-bottom: .5em;
     padding: 1em;
 }
 
@@ -14,7 +14,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: .5em;
+    margin-bottom: 1em;
 }
 
 .title {
