--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,9 +1,12 @@
 .profile {
-    padding: 1em;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-between;
     height: 100%;
+}
+
+.name {
+    font-weight: 700;
 }
 
 .photo {
@@ -11,8 +14,23 @@
     width: 75px;
     border-radius: 50%;
     margin-right: 1em;
+    object-fit: cover;
 }
 
-.profileHead {
+.profileHead, .postCounter {
+    border-bottom: 1px solid grey;
+    padding: 1em;
+}
 
+.postTotal {
+    color: #004182;
+    font-weight: 700;
+}
+
+.postCounter {
+    display: flex;
+}
+
+.socials {
+    padding: 1em;
 }
