--- a/src/components/Posts/Post.module.css
+++ b/src/components/Posts/Post.module.css
@@ -10,6 +10,10 @@
     padding: 1em;
 }
 
+.li h2 {
+    color: #004182;
+}
+
 .retrievedPost {
     display: flex;
     justify-content: space-between;
