--- a/src/components/Layout/Form.module.css
+++ b/src/components/Layout/Form.module.css
@@ -84,3 +84,9 @@ textarea {
       75%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,0 100%,0 100%)}
       100% {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,0 100%,0 0)}
   }
+
+@media screen and (max-width: 630px) {
+    .formTitle, .formText {
+        width: 270px;
+    }
+}
