--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -4,3 +4,14 @@
     background-color: white;
     border-bottom: 1px solid grey;
 }
+
+.containerLight {
+    background-color: #f5f5f5;
+    color: #333;
+}
+  
+.containerDark {
+    background-color: #343A46;
+    color: #f5f5f5;
+}
+  
