--- a/src/components/Layout/Form.module.css
+++ b/src/components/Layout/Form.module.css
@@ -56,6 +56,17 @@ textarea {
     transition: .2s ease-in;
 }
 
+.containerLight {
+    background-color: #f5f5f5;
+    color: #333;
+}
+  
+.containerDark {
+    background-color: #343A46;
+    color: #f5f5f5;
+    border-radius: 14px;
+}
+
 .loader {
     width: 35px;
     height: 35px;
