--- a/src/components/Layout/PostForm.module.css
+++ b/src/components/Layout/PostForm.module.css
@@ -8,6 +8,17 @@
     justify-content: center;
 }
 
+.containerLight {
+    background-color: #f5f5f5;
+    color: #333;
+}
+  
+.containerDark {
+    background-color: #343A46;
+    color: #f5f5f5;
+    border-radius: 14px;
+}
+
 @media screen and (max-width: 950px) {
     .mainPost {
         display: flex;
