--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     justify-content: space-between;
     height: 100%;
+    border-radius: 14px;
 }
 
 .name {
@@ -33,6 +34,21 @@
 
 .socials {
     padding: 1em;
+}
+
+.containerLight {
+    background-color: #f5f5f5;
+    color: #333;
+}
+  
+.containerDark {
+    background-color: #343A46;
+    color: #f5f5f5;
+    border-radius: 14px;
+}
+
+.textDark {
+    color: #f5f5f5;
 }
 
 @media screen and (max-width: 950px) {
