--- a/src/components/Todo/Todo.module.css
+++ b/src/components/Todo/Todo.module.css
@@ -10,6 +10,7 @@
     background-color: #0077B5;
     height: 28px;
     float: right;
+    cursor: pointer;
 }
 
 .li {
@@ -37,4 +38,16 @@
 
 .deleteIcon {
     height: 29.5px;
+    cursor: pointer;
+}
+
+.containerLight {
+    background-color: #f5f5f5;
+    color: #333;
+}
+  
+.containerDark {
+    background-color: #343A46;
+    color: #f5f5f5;
+    border-radius: 14px;
 }
